--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.10",
+    "antd-scss-theme-plugin": "^1.0.8",
     "craco-less": "^1.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
